--- a/ios/Import_photo_action/Base.lproj/MainInterface.storyboard
+++ b/ios/Import_photo_action/Base.lproj/MainInterface.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="59" width="320" height="44"/>
                                 <items>
                                     <navigationItem id="3HJ-uW-3hn">
-                                        <barButtonItem key="leftBarButtonItem" title="Send" style="done" id="WYi-yp-eM6">
+                                        <barButtonItem key="leftBarButtonItem" title="Import" style="done" id="WYi-yp-eM6">
                                             <connections>
                                                 <action selector="done" destination="ObA-dk-sSI" id="OMH-5u-KA0"/>
                                             </connections>
